<resources>
    <string name="app_name">PIVP</string>
    <string name="no_internet">No internet Connection</string>
    <string name="internet_msg">Please turn on internet connection to continue</string>
    <string name="close">close</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>

    <string name="pls_enter_unm">Please enter username.</string>
    <string name="pls_enter_pwd">Please enter password.</string>
    <string name="pls_enter_dns">Please enter DNS.</string>
    <string name="pls_enter_gnm">Group name can\'t be empty</string>
    <string name="pls_enter_tnm">Please enter trailer name.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_group">Select Group</string>
    <string name="select_camera">Select Camera</string>
    <string name="_2019_packettalk_all_right_reserved">\u00A9 2020 Packetalk All Right Reserved</string>
    <string name="trailer">Trailer</string>
    <string name="auto_focus">Auto focus</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_user">Create User</string>
    <string name="user_log">Users Log</string>
    <string name="update_user">Update Users</string>
    <string name="search">Search</string>
    <string name="trailer_name">Trailer Name</string>
    <string name="dns">DNS</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="group_name">Group Name</string>
    <string name="delete_group">Delete Group</string>
    <string name="save">Save</string>
    <string name="colon">:</string>
    <string name="ip">IP</string>
    <string name="community">Community</string>
    <string name="oid">OID</string>
    <string name="type">TYPE</string>
    <string name="add_camera">Add Camera</string>
    <string name="public_camera">Public Camera</string>
    <string name="selected_user">Selected user :</string>
    <string name="update">Update</string>
    <string name="click_here_to_add_all_group_camera">Click here to add all group camera</string>
    <string name="select_all">SELECT ALL</string>
    <string name="default_group">Default Group</string>
    <string name="my_camera">My Camera</string>
    <string name="no_camera_found">No camera found!</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="delete">DELETE</string>
    <string name="delete_msg">Are you sure you want to delete?</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="delete_all">Delete All</string>
    <string name="assign_camera">Assign Camera</string>
    <string name="camera_view">Camera View</string>
    <string name="critical">Critical</string>
    <string name="warning">Warning</string>
    <string name="normal">Normal</string>
    <string name="edit">Edit</string>
    <string name="no_record_found">No Record Found.</string>
    <string name="clear_log">Clear Log</string>
    <string name="assign_camera_to_user">Assign camera to user</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="week">Week</string>
    <string name="_3_week">3-Week</string>
    <string name="month">Month</string>
    <string name="_6_month">6-Month</string>
    <string name="year">Year</string>
    <string name="chart_type">Chart Type</string>
    <string name="update_camera">Update Camera</string>
    <string name="existing_url">Existing URL</string>
    <string name="add_server_url">Add Server URL</string>
    <string name="new_url">New URL</string>
    <string name="fuel_level">FUEL LEVEL</string>
    <string name="historical">Historical</string>
    <string name="voltage">VOLTAGE</string>
    <string name="engine_running">ENGINE RUNNING</string>
    <string name="last_time_engine_run">LAST TIME ENGINE RUN</string>
    <string name="total_run_time">TOTAL RUN TIME</string>
    <string name="logout">Logout</string>
    <string name="update_users">Update Users</string>
    <string name="select_user">Select Users</string>
    <string name="zoom">Zoom</string>
    <string name="router_id">Router Id:</string>
    <string name="trailer_name_popup">Trailer Name:</string>
    <string name="latitude">Latitude:</string>
    <string name="last_updated">Last Updated:</string>
    <string name="longitude">Longitude:</string>
    <string name="no_data_available">No data available</string>
    <string name="select_from_date_time"><![CDATA[Please select from date & time.]]></string>
    <string name="select_to_date_time"><![CDATA[Please select to date & time.]]></string>
    <string name="all_digit">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890_-!@#$%^*()</string>
    <string name="please_wait">Please wait..</string>
    <string name="sign_out">LOGOUT</string>
    <string name="sign_out_confirm_message">Do you want to logout this application ?</string>

    <string-array name="test_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

</resources>