<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/delete_popup_height"
    android:layout_gravity="center"
    android:layout_margin="@dimen/eight_dp"
    android:gravity="center"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/delete_popup_background"
    app:cardCornerRadius="@dimen/eight_dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <com.packetalk.utility.MyTextViewBold
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/twenty_dp"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/twenty_four_dp"
            android:orientation="horizontal">

            <com.packetalk.utility.CustomButton
                android:id="@+id/btn_yes"
                style="@style/btnStyle"
                android:layout_width="wrap_content"
                android:text="@string/yes"
                android:textStyle="bold"
                app:qb_radius="@integer/button_radius" />

            <com.packetalk.utility.CustomButton
                android:id="@+id/btn_no"
                style="@style/btnStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/eight_dp"
                android:text="@string/no"
                android:textStyle="bold"
                app:qb_radius="@integer/button_radius" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>