<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".setting.activity.AddTrailerACt">

    <include
            android:id="@+id/include2"
            layout="@layout/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/twenty_four_dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include2">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edDns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/dns"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edTrailerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:hint="@string/trailer_name"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:gravity="center"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btnSubmit"
                    style="@style/btnStyle"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center"
                    android:text="@string/submit" />

            <Button
                    android:id="@+id/btnCancel"
                    style="@style/btnStyle"
                    android:layout_width="@dimen/hundred_dp"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/sixteen_dp"
                    android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewTrailerList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


</androidx.constraintlayout.widget.ConstraintLayout>