<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.fragment.HomeFrg">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/fifty_dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.packetalk.utility.MyTextView
                android:id="@+id/tvSelectGroup"
                style="@style/textStyleHomeFragmentSelectGropCamera"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/zero_dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:text="@string/select_group"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:id="@+id/view"
                style="@style/viewStyle"
                android:layout_width="@dimen/one_dp"
                android:layout_height="@dimen/thirty_two_dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.packetalk.utility.MyTextView
                android:id="@+id/tvSelectCamera"
                style="@style/textStyleHomeFragmentSelectGropCamera"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/zero_dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:text="@string/select_camera"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:id="@+id/view2"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="@dimen/five_dp"
                android:background="@drawable/bottom_shadow_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewCameras"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/zero_dp"
            android:layout_marginStart="@dimen/sixteen_dp"
            android:layout_marginEnd="@dimen/sixteen_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <com.packetalk.utility.MyTextView
            android:id="@+id/tvNodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_camera_found"
            android:textSize="@dimen/thirty_sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>